# wickra-terminal

./: .editorconfig  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  clippy.toml  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: check-cbindgen.sh
.github/workflows/: bench.yml  ci.yml  codeql.yml  links.yml  release.yml  scorecard.yml  testnet.yml  web-deploy.yml  zizmor.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/include/: wickra_terminal.h
bindings/c/src/: lib.rs
bindings/csharp/: README.md
bindings/csharp/WickraTerminal/: Native.cs  README.md  Terminal.cs  WickraTerminal.csproj
bindings/csharp/WickraTerminal.Tests/: GoldenTests.cs  TerminalTests.cs  WickraTerminal.Tests.csproj
bindings/go/: README.md  go.mod  golden_test.go  terminal_test.go  wickra.go
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/terminal/: Native.java  Terminal.java
bindings/java/src/test/java/org/wickra/terminal/: GoldenTest.java  TerminalTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: completeness.test.js  golden.test.js  terminal.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_terminal/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_golden.py  test_manualfeed.py  test_smoke.py  test_timemachine.py
bindings/r/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: terminal.R
bindings/r/src/: Makevars  Makevars.win  wickra_terminal.c
bindings/r/tests/: run_tests.R
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
crates/terminal-bench/: Cargo.toml
crates/terminal-bench/benches/: terminal.rs
crates/terminal-core/: Cargo.toml
crates/terminal-core/src/: config.rs  error.rs  lib.rs  state.rs  terminal.rs  view.rs
crates/terminal-core/src/panels/: book.rs  chart.rs  footprint.rs  mod.rs  tape.rs  watchlist.rs
crates/terminal-core/src/source/: live.rs  manual.rs  mod.rs  replay.rs  synth.rs
crates/terminal-core/tests/: conformance.rs  golden.rs  live_integration.rs  proptest_invariants.rs
crates/ui-tui/: Cargo.toml
crates/ui-tui/src/: app.rs  input.rs  main.rs  render.rs  spec.rs  term.rs
crates/ui-tui/src/widgets/: book.rs  chart.rs  footprint.rs  mod.rs  tape.rs  watchlist.rs
docs/: Cookbook.md  PANELS.md  RENDERERS.md  SOURCES.md  STREAMING.md
examples/: README.md
examples/c/: CMakeLists.txt  synth.c  terminal.cpp
examples/csharp/: Program.cs  SynthTerminal.csproj
examples/go/: go.mod  synth_terminal.go
examples/java/: SynthTerminal.java
examples/node/: package-lock.json  package.json  synth_terminal.js
examples/python/: synth_terminal.py
examples/r/: synth_terminal.R
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_parse.rs  feed_event.rs  state_fold.rs  view_model.rs
golden/: README.md  config.json
golden/expected/: basic.json  basic.min.json
golden/replay/: basic.json
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  binance.ts  main.ts  style.css  types.ts
web/src/render/: chart.ts
