[package]
name = "wickra-terminal-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
# The core without the `live` feature: no native networking, so the fuzz build
# stays lean and no target ever opens a socket.
terminal-core = { path = "../crates/terminal-core", default-features = false }

# Detach from the parent workspace — cargo-fuzz builds this crate on its own with
# sanitizer flags on a nightly toolchain.
[workspace]

[[bin]]
name = "feed_event"
path = "fuzz_targets/feed_event.rs"
test = false
doc = false
bench = false

[[bin]]
name = "state_fold"
path = "fuzz_targets/state_fold.rs"
test = false
doc = false
bench = false

[[bin]]
name = "view_model"
path = "fuzz_targets/view_model.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config_parse"
path = "fuzz_targets/config_parse.rs"
test = false
doc = false
bench = false
