[package]
name = "wickra-terminal-python"
description = "Python bindings for wickra-terminal: the data-driven trading-terminal core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "_wickra_terminal"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
terminal-core = { workspace = true }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
