[package]
name = "terminal-core"
description = "Data-driven core of the Wickra trading terminal: sources, O(1) state and panels that emit view-models."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
# `live` pulls the native exchange facade (tokio/reqwest) for the Live source.
# It is on by default for native builds; the wasm binding disables it so the
# core compiles for wasm32 (the browser feeds Live over its own WebSocket).
default = ["live"]
live = ["dep:wickra-exchange"]

[dependencies]
# Market types (Symbol/Event/…) — no networking, so this compiles on wasm32.
wickra-exchange-core.workspace = true
# The native connectivity facade (Live source); optional, native-only.
wickra-exchange = { workspace = true, optional = true }
# Streaming indicators for the chart panel's indicator set.
wickra-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
proptest.workspace = true
# The market event types (TradePrint, OrderSide, …) for building test feeds.
wickra-exchange-core.workspace = true
