[package]
name = "wickra-terminal"
description = "The native TUI renderer for the Wickra trading terminal (ratatui)."
version.workspace = true
edition.workspace = true
# ratatui 0.29 pulls `instability`/`darling`, which require Rust 1.88 (newer than
# the workspace 1.86 minimum). The library (terminal-core) stays 1.86; this TUI
# application needs 1.88, and is checked by the 1.88 MSRV job.
rust-version = "1.88"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lints]
workspace = true

[[bin]]
name = "wickra-terminal"
path = "src/main.rs"

[dependencies]
terminal-core.workspace = true
wickra-exchange.workspace = true
ratatui.workspace = true
crossterm.workspace = true
clap.workspace = true
